# irsattend

./: .gitignore  README.md  management.py  management.tcss  pyproject.toml  pyrightconfig.json
docs/: todo.md
src/: config.py
src/irsattend/: __init__.py  __main__.py  config.py  emailer.py  example-config.toml  main.py
src/irsattend/binders/: events.py
src/irsattend/db/: database.py  models.py
src/irsattend/features/: emailer.py  events.py  qr_code_generator.py  validators.py
src/irsattend/model/: checkins_mod.py  config.py  database.py  db_tables.py  emailer.py  events_mod.py  excel.py  google_tools.py  google_tools_old.py  migrate.py  qr_code_generator.py  roster.py  schema.py  students.py  students_mod.py
src/irsattend/scanner/: barcode_generator.py  barcode_reader.py  camera.py  qr_code_generator.py  qr_code_reader.py
src/irsattend/scripts/: sync_roster.py
src/irsattend/styles/: confirm_dialogs.tcss  event_screen.tcss  file_widget.tcss  intro.tcss  main.tcss  management.tcss  modal.tcss  pw_dialog.tcss  root.tcss  student_dialog.tcss  student_screen.tcss  take_attendance.tcss
src/irsattend/ui/: intro_view.py  main_view.py  management_view.py  modals.py  scan_view.py
src/irsattend/view/: __init__.py  attendance_screen.py  confirm_dialogs.py  event_screen.py  file_widgets.py  main_app.py  management_screen.py  modals.py  pw_dialog.py  scan_screen.py  student_dialog.py  student_screen.py  take_attendance.py
tests/: conftest.py  irsattend.db  notest_roster_updater.py  notest_settings.py  run-test-db.ps1  test_checkins.py  test_database.py  test_events.py  test_excel.py  test_qrcodes.py  test_roster_updater.py  test_settings.py  test_students.py
tests/data/: README.md  example-roster-settings.yaml  irsattend.toml  raps.csv  test-data.py  test-students.csv  testdata-full.json  testdata-no-events.json  testdata.json
