[project]
name = "irsattend"
version = "0.1.0"
description = "The Issaquah Robotics Society's Python program for managing attendance"
readme = "README.md"
authors = [
    { name = "irwinsnet", email = "stacy.k.irwin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "segno>=1.6.6",
    "textual-dev>=1.7.0",
    "textual[syntax]>=5.3.0",
    "treepoem>=3.27.1",
    "python-barcode[images]>=0.15.1",
    "zxing-cpp>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
