[project]
name = "irsattend"
version = "0.5.0"
description = "The Issaquah Robotics Society's Python program for managing attendance"
readme = "README.md"
authors = [
    { name = "irwinsnet", email = "stacy.k.irwin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "marimo>=0.17.0",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "polars>=1.33.0",
    "segno>=1.6.6",
    "textual[syntax]>=5.3.0",
    "tqdm>=4.67.1",
    "treepoem>=3.27.1",
    "xlsxwriter>=3.2.5",
    "zxing-cpp>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyterlab>=4.4.10",
    "marimo>=0.15.2",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "textual-dev>=1.7.0",
]

[project.scripts]
attend = "irsattend.__main__:main"
